feat(文件服务类):添加批量获取文件address接口
(cherry picked from commit 9a8a8eec284591d855e215abc915e00c0316dfd7)